--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "build": "^0.1.4",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova": "^8.1.2",
+    "cordova-android": "^7.1.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -69,11 +70,16 @@
     "ng2-pdf-viewer": "^4.1.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29"
+    "zone.js": "0.8.29",
+    "cordova-plugin-uniquedeviceid": "^1.3.2",
+    "cordova-plugin-zip": "^3.1.0",
+    "cordova-plugin-media": "^5.0.3",
+    "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-file-opener2": "^3.0.5",
+    "cordova-plugin-dbcopy": "^2.1.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.4",
-    "cordova-android": "^7.1.0",
     "cordova-plugin-android-permissions": "^1.1.0",
     "cordova-plugin-dbcopy": "^2.1.2",
     "cordova-plugin-document-viewer": "^0.9.13",
@@ -111,7 +117,9 @@
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-file-opener2": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-uniquedeviceid": {},
+      "cordova-plugin-zip": {}
     },
     "platforms": [
       "android"
